<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_steak"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.davismcclure.grillguide.SteakActivity">

    <TextView
        android:text="@string/steakTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/steakTitle"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        />

    <Button
        android:text="@string/hamburgerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/hamurgerButton" />

    <Button
        android:text="@string/veggieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/veggieButton" />

    <Button
        android:text="@string/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/homeButton" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/steak"
        android:id="@+id/steakImage"
        android:layout_below="@+id/steakTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/steakInfo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/steakInfo"
        android:layout_above="@+id/hamurgerButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

</RelativeLayout>
